<resources>

    <string name="app_name">HomeArt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
            <string name="action_settings">Ajustes</string>

    <!-- MENÚS -->
    <string name="menu_home">Home</string>
    <string name="menu_seguridad">Seguridad</string>
    <string name="menu_ventanas">Puertas y Ventanas</string>
    <string name="menu_exterior">Exterior</string>
    <string name="menu_termostato">Termostato</string>
    <string name="menu_iluminacion">Iluminación</string>
    <string name="menu_cocina">Cocina</string>
    <string name="menu_salon">Salón</string>
    <string name="menu_bano">Baño</string>
    <string name="menu_dormitorio">Dormitorio</string>
    <string name="menu_oficina">Oficina</string>
    <string name="menu_garaje">Garaje</string>
    <string name="menu_huerto">Huerto</string>
    <string name="menu_ajustes">Ajustes</string>

    <string name="etsidi">ETSIDI</string>
    <string name="homeart">HomeArt</string>
    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="bano">BAÑO</string>
    <string name="garaje">GARAJE</string>
    <string name="huerto">HUERTO</string>
    <string name="dormitorio">DORMITORIO</string>
    <string name="oficina">OFICINA</string>
    <string name="cocina">COCINA</string>
    <string name="interior">INTERIOR</string>
    <string name="salon">SALÓN</string>
    <string name="estancias">ESTANCIAS</string>
    <string name="textview">TextView</string>
    <string name="alarma">ALARMA</string>

    <!-- SWITCHES -->
    <string name="switch_interior">INTERIOR</string>
    <string name="switch_exterior">EXTERIOR</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="sala_de_estar">SALA DE ESTAR</string>
    <string name="comedor">COMEDOR</string>
    <string name="fregadero">FREGADERO</string>
    <string name="general">GENERAL</string>
    <string name="espejo">ESPEJO</string>
    <string name="mesita_de_noche_izq">MESITA DE NOCHE IZQ</string>
    <string name="mesita_de_noche_dch">MESITA DE NOCHE DCH</string>
    <string name="despacho">DESPACHO</string>
    <string name="zona_gaming">ZONA GAMING</string>
    <string name="puerta_principal">PUERTA PRINCIPAL</string>
    <string name="parcela">PARCELA</string>
    <string name="ventana">VENTANA</string>
    <string name="porton">PORTÓN</string>
    <string name="puerta">PUERTA</string>
    <string name="temperatura">TEMPERATURA</string>
    <string name="humedad">HUMEDAD</string>
    <string name="ventilador">VENTILADOR</string>
    <string name="calefaccion">CALEFACCIÓN</string>
    <string name="humedad_de_tierra">HUMEDAD DE TIERRA</string>
    <string name="riego">RIEGO</string>
    <string name="manual">MANUAL</string>
    <string name="automatico">AUTOMÁTICO</string>
    <string name="set_led">SET_LED:</string>
    <string name="ambiente">AMBIENTE</string>
    <string name="recibidor">RECIBIDOR</string>
    <string name="exterior">EXTERIOR</string>
    <string name="jardin">JARDÍN</string>
    <string name="porche">PORCHE</string>
    <string name="tendedero">TENDEDERO</string>
    <string name="iluminacion">ILUMINACIÓN</string>
    <string name="toldo">TOLDO</string>
    <string name="r">R</string>
    <string name="b">B</string>
    <string name="g">G</string>
    <string name="cortinas">CORTINAS</string>
    <string name="television">TELEVISIÓN</string>
    <string name="entretenimiento">ENTRETENIMIENTO</string>
    <string name="item">Item</string>
    <string name="configuracion">CONFIGURACIÓN</string>
    <string name="permitir_notificaciones">Permitir notificaciones</string>
    <string name="encendido">ENCENDIDO</string>
    <string name="apagado">APAGADO</string>
    <string name="termostato">TERMOSTATO</string>
    <string name="encendido_ventilacion">ENCENDIDO VENTILACIÓN</string>
    <string name="apagado_ventilacion">APAGADO VENTILACIÓN</string>
    <string name="encendido_calefaccion">ENCENDIDO CALEFACCIÓN</string>
    <string name="apagado_calefaccion">APAGADO CALEFACCIÓN</string>

</resources>