<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/toggle_automatico_seguridad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="54dp"
        android:fontFamily="@font/secular_one"
        android:text="@string/automatico"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/switch_modo_seguridad"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/toggle_manual_seguridad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/secular_one"
        android:text="@string/manual"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/switch_modo_seguridad"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch_modo_seguridad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:checked="false"
        android:fontFamily="@font/secular_one"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:scrollbarSize="10dp"
        android:switchPadding="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/text_seguridad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:text="@string/alarma"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_modo_seguridad" />

    <Switch
        android:id="@+id/switch_seguridad_int"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="64dp"
        android:checked="false"
        android:fontFamily="sans-serif-medium"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:scrollbarSize="10dp"
        android:switchPadding="100dp"
        android:text="@string/switch_interior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_seguridad"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Switch
        android:id="@+id/switch_seguridad_ext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:checked="false"
        android:fontFamily="sans-serif-medium"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:scrollbarSize="10dp"
        android:switchPadding="97dp"
        android:text="@string/switch_exterior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_seguridad_int"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ToggleButton
        android:id="@+id/toggle_seguridad_int"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/toggle_seguridad_bg"
        android:clickable="false"
        android:textOff=""
        android:textOn=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_seguridad" />

    <ToggleButton
        android:id="@+id/toggle_seguridad_ext"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/toggle_seguridad_bg"
        android:clickable="false"
        android:textOff=""
        android:textOn=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggle_seguridad_int" />

</androidx.constraintlayout.widget.ConstraintLayout>