<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_ventana_dorm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:text="@string/ventana"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_iluminacion_mesitadch_dorm" />

    <Switch
        android:id="@+id/switch_cortinas_dorm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="64dp"
        android:checked="false"
        android:fontFamily="sans-serif-medium"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:scrollbarSize="10dp"
        android:switchPadding="94dp"
        android:text="@string/cortinas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_ventana_dorm"
        tools:ignore="DuplicateSpeakableTextCheck,DuplicateClickableBoundsCheck" />

    <ToggleButton
        android:id="@+id/toggle_cortinas_dorm"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/toggle_persianas_bg"
        android:clickable="false"
        android:textOff=""
        android:textOn=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_ventana_dorm" />

    <TextView
        android:id="@+id/text_dormitorio_dormitorio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:text="@string/iluminacion"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/toggle_iluminacion_general_dorm"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/toggle_iluminacion_bg"
        android:clickable="false"
        android:textOff=""
        android:textOn=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_dormitorio_dormitorio" />

    <Switch
        android:id="@+id/switch_iluminacion_general_dorm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="64dp"
        android:checked="false"
        android:fontFamily="sans-serif-medium"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:scrollbarSize="10dp"
        android:switchPadding="100dp"
        android:text="@string/general"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_dormitorio_dormitorio"
        tools:ignore="DuplicateSpeakableTextCheck,DuplicateClickableBoundsCheck" />

    <ToggleButton
        android:id="@+id/toggle_iluminacion_mesizq_dorm"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/toggle_iluminacion_bg"
        android:clickable="false"
        android:textOff=""
        android:textOn=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggle_iluminacion_general_dorm" />

    <Switch
        android:id="@+id/switch_iluminacion_mesitaizq_dorm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:checked="false"
        android:fontFamily="sans-serif-medium"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:scrollbarSize="10dp"
        android:switchPadding="16dp"
        android:text="@string/mesita_de_noche_izq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_iluminacion_general_dorm"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ToggleButton
        android:id="@+id/toggle_iluminacion_mesdch_dorm"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/toggle_iluminacion_bg"
        android:clickable="false"
        android:textOff=""
        android:textOn=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggle_iluminacion_mesizq_dorm" />

    <Switch
        android:id="@+id/switch_iluminacion_mesitadch_dorm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:checked="false"
        android:fontFamily="sans-serif-medium"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:scrollbarSize="10dp"
        android:switchPadding="10dp"
        android:text="@string/mesita_de_noche_dch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_iluminacion_mesitaizq_dorm"
        tools:ignore="DuplicateSpeakableTextCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>